--- a/config/Elenai Dodge.cfg
+++ b/config/Elenai Dodge.cfg
@@ -42,7 +42,7 @@ general {
             I:"Cooldown Speed"=20
 
             # Whether the player can dodge whilst airborne.
-            B:"Enable whilst Airborne"=false
+            B:"Enable whilst Airborne"=true
 
             # Whether the player can dodge whilst blocking.
             B:"Enable whilst Blocking"=false
@@ -88,7 +88,7 @@ general {
 
         weights {
             # Enables the Weight System
-            B:"Enable Weights"=true
+            B:"Enable Weights"=false
 
             # The Cooldown Speed and Dodge Force given to the player depending on their weight. Each tier is determined by a minimum weight to enter it. Always start this at 0.0 and add each tier in increasing weight order. To make a player 'Overencumbered' simply set a tiers cooldown AND force to 0. Insert values as such: minimumweight:cooldown|force. Idea Credit: SandwichHorror
             S:"Weight Tiers" <
@@ -420,7 +420,7 @@ general {
             D:Distance=0.14
 
             # Whether the Player can Wall Jump by pressing jump again with their back to a wall. This value does nothing if Reskillable is installed as wall jumping is unlocked as a trait. This value can also be overriden by the 'Nimble' potion effect.
-            B:"Enable Wall Jump"=false
+            B:"Enable Wall Jump"=true
 
             # How much exhaustion is added when wall jumping. For reference, sprinting adds 0.01 exhaustion per meter, and the Hunger effect adds 0.1 per second.
             # Min: 0.0
@@ -433,7 +433,7 @@ general {
             # The forwards force of the player's wall jump. (How far they are pushed in the direction they are facing). This value is very sensitive.
             # Min: 0.0
             # Max: 1.7976931348623157E308
-            D:"Forwards Force"=0.3
+            D:"Forwards Force"=0.6
 
             # How many half drumsticks the player needs to wall jump. The default six is the same as sprinting.
             # Min: -1
@@ -500,7 +500,7 @@ general {
             D:Distance=0.12
 
             # Whether the Player can Ledge Grab by pressing jump again with their face to the top of a wall. This value does nothing if Reskillable is installed as ledge grabbing is unlocked as a trait. This value can also be overriden by the 'Climber' potion effect.
-            B:"Enable Ledge Grab"=false
+            B:"Enable Ledge Grab"=true
 
             # How much exhaustion is added when ledge grabbing. For reference, sprinting adds 0.01 exhaustion per meter, and the Hunger effect adds 0.1 per second.
             # Min: 0.0
