disabled dalek mod title by default

--- a/config/Dalek Mod Config.cfg
+++ b/config/Dalek Mod Config.cfg
@@ -4,10 +4,10 @@ general {
 
     "client side" {
         B:"Allow FlightPanel GUI"=true
-        B:"Custom Title Screen"=true
+        B:"Custom Title Screen"=false
         B:"Inventory Overlays"=true
         B:"Panel names"=true
-        B:"Play Title Music"=true
+        B:"Play Title Music"=false
         B:"Render Boti Portal"=false
 
         # Min: 0
